--- a/meet/pubspec.yaml
+++ b/meet/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.1
+  font_awesome_flutter: ^9.2.0
   formz: ^0.4.1
   google_fonts: ^2.2.0
   google_sign_in: ^5.2.1
