--- a/meet/pubspec.yaml
+++ b/meet/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
   sdk: ">=2.15.1 <3.0.0"
 
 dependencies:
+  auto_route: ^3.2.2
   cloud_firestore: ^3.1.5
   cupertino_icons: ^1.0.2
   equatable: ^2.0.3
@@ -24,7 +25,9 @@ dependencies:
   google_sign_in: ^5.2.1
   internet_connection_checker: ^0.0.1+3
 
-dev_dependencies:
+dev_dependencies: 
+  build_runner: ^2.1.7
+  auto_route_generator: ^3.2.1
   flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
